--- a/index.html
+++ b/index.html
@@ -18,6 +18,13 @@
                     <li>Link 3</li>
                 </ul>
                 </li>
+                 <li data-dropdown-item>Dropdown
+                <ul>
+                    <li>Link 1</li>
+                    <li>Link 2</li>
+                    <li>Link 3</li>
+                </ul>
+                </li>
             <li>Contact</li>
         </ul>
     </nav>
